# exemplo-modulo-cpp

./: CMakeLists.txt  Makefile  README.md
src/: exemplo.cpp  exemplo.hpp
tests/: teste_exemplo.cpp
